--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+**/*.mp3 filter=lfs diff=lfs merge=lfs -text
 *.mp3 !text !filter !merge !diff
 *.wav !text !filter !merge !diff
 *.jar !text !filter !merge !diff
