--- a/package.json
+++ b/package.json
@@ -1,1 +1,23 @@
-{}
+{
+  "name": "iqe",
+  "description": "Mainly LX Studio / Chromatik project and Java code for Burning Man IQE HQ shade structure LEDznutz. Also contains python code and Jupyter notebooks for audio analysis with [Librosa](https://librosa.org/doc/latest/index.html), e.g. real time beat detection and sync.",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node scripts.js bridge",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JohnnyMarnell/iqe.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JohnnyMarnell/iqe/issues"
+  },
+  "homepage": "https://github.com/JohnnyMarnell/iqe#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "osc-js": "^2.4.0"
+  }
+}
