--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/JohnnyMarnell/iqe#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "osc-js": "^2.4.0"
+    "osc-js": "^2.4.0",
+    "rangetouch": "^2.0.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
