--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JohnnyMarnell/iqe#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "j5-midi": "github:JohnnyMarnell/j5-midi",
     "osc-js": "^2.4.0",
     "rangetouch": "^2.0.1"
   },
