--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,39 @@
     <dependency>
       <groupId>com.heronarts</groupId>
       <artifactId>chromatik</artifactId>
-      <version>0.4.2-SNAPSHOT</version>
+      <version>ALPHA</version>
       <scope>system</scope>
-      <systemPath>${user.home}/Downloads/Chromatik-alpha/glxstudio-0.4.2-SNAPSHOT-jar-with-dependencies.jar</systemPath>
+      <systemPath>${project.basedir}/vendor/glxstudio.jar</systemPath>
     </dependency>
   </dependencies>
 
   <build>
+
+    <plugins>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.8</version>
+        <executions>
+          <execution>
+            <id>pre-dependency-resolution</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <exec
+                    dir="${project.basedir}"
+                    executable="${project.basedir}/src/scripts/download_chromatik.sh"
+                    failonerror="true">
+                </exec>
+              </tasks>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
