--- a/src/nodejs/package.json
+++ b/src/nodejs/package.json
@@ -3,7 +3,7 @@
   "description": "Mainly LX Studio / Chromatik project and Java code for Burning Man IQE HQ shade structure LEDznutz. Also contains python code and Jupyter notebooks for audio analysis with [Librosa](https://librosa.org/doc/latest/index.html), e.g. real time beat detection and sync.",
   "version": "1.0.0",
   "scripts": {
-    "start": "IQE_WEB_PORT=80 IQE_APP_OSC_TO_PORT=3232 IQE_APP_OSC_FROM_PORT=3333 IQE_EXCLUDE='/lx/modulation/.*Click/triggerOut|/lx/tempo/(beat|trigger)|/lx/mixer/channel/.*/pattern/.*/syncTrigger' node scripts.js bridge",
+    "start": "IQE_WEB_PORT=80 IQE_APP_OSC_TO_PORT=3232 IQE_APP_OSC_FROM_PORT=3333 IQE_EXCLUDE='/lx/modulation/.*Click/triggerOut|/lx/mixer/channel/.*/pattern/.*/syncTrigger|^/lx/palette/swatch/color/\\d+/primary(/(hue|saturation|brightness))?$' node scripts.js bridge # sigh /lx/tempo/(beat|trigger)",
     "lxp": "node buildProject.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
