--- a/src/control-ui/package.json
+++ b/src/control-ui/package.json
@@ -6,14 +6,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "vite --port 8282 --host"
+    "start": "vite --port 8282 --host",
+    "midi": "tsx src/midi-bridge.ts"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "^5.0.12",
+    "tsx": "^4.7.0"
   },
   "dependencies": {
-    "osc-js": "^2.4.0"
+    "osc-js": "^2.4.0",
+    "webmidi": "^3.1.0"
   }
 }
